k8s/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rumahpc-service
  namespace: rumahpc-dev
spec:
  selector:
    app: rumahpc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: rumahpc-api
